# rag_bible

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  benchmark.py  config.py  embeddings.py  ingest.py  pyproject.toml  retrieve.py
.github/: FUNDING.yml
.github/workflows/: deploy.yml
docs/: index.html  project-context.md
rag/: __init__.py  embeddings.py  feedback.py  ingest.py  retrieve.py
static/: app.js  index.html  manifest.json  service-worker.js  styles.css
templates/: context_verses.html  error.html  loading.html  no_results.html  results.html
tests/: conftest.py  test_app.py  test_embeddings.py  test_feedback.py  test_ingest.py  test_integration.py  test_retrieve.py
